# CopterFeeder

./: .cz.toml  .env.example  .env.save  .gitignore  .pre-commit-config.yaml  2024-10-25.out  2024-10-28.out  20241223_aircraft.json  20241226_aircraft.json  20241227_1456_aircraft.json  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.dhbbranch  README.md  __version__.py  a62041.out  bills_operators_20230129094248.csv  docker-compose-buildx.yml  docker-compose.yml  docker-entrypoint.sh  example_dot_env  fcs.py  feed_copterspotter.py  feed_copterspotter_2023.py  feed_copterspotter_20250124-03.py  feed_copterspotter_old.py  get_bills.py  get_bills_operators.sh  hex  icao_heli_types.py  logfile_2023  logs_20240705  pyproject.toml  requirements-apt-packages.txt  requirements-dev.txt  requirements.txt  setup.txt  wget-log  (+2 more)
Types/: ICAO_TYPES.csv  ICAO_TYPES.xlsx
buildx/: README.md  buildkitd.toml  save_setup.sh  setup_buildx_kubernetes_builder.sh
config/: README.md
deprecated/: feed_copterspotter_20250127-04_bad.py  feed_copterspotter_old.py  old_example_dot_env
kube/: README.md  feed-copterspotter-deployment.yaml  feed_copterspotter-service.yaml
kube/deprecated/: fcs-namespace.yaml
kube/dev/: fcs-deployment-dev.yaml  fcs-env-configmap-dev.yaml  fcs-ingress-dev.yaml  fcs-namespace-dev.yaml  fcs-service-dev.yaml  feed-copterspotter-deployment-dev.yaml  feed_copterspotter-service-dev.yaml
kube/prod/: fcs-deployment-prod.yaml  fcs-env-configmap.yaml  fcs-namespace-prod.yml  fcs-service-prod.yaml  feed-copterspotter-deployment-prod.yaml  (+1 more)
(+7 files in other folders)
