[project]
name = "FeedCopterSpotter"
version = "0.2.4"

[tool.commitizen]
version_provider = "pep621"
version_files = [
    "pyproject.toml:version",
    "__version__.py:__version__",
    "docker-compose.yml:image:$version",
    "docker-compose-buildx.yml:image:$version"
]
update_changelog_on_bump = true
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
major_version_zero = true
