[project]
name = "FeedCopterSpotter"
version = "0.2.6"

[tool.commitizen]
version_provider = "pep621"
version_files = [
    "__version__.py",
    "pyproject.toml:version",
]
update_changelog_on_bump = true
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
#major_version_zero = true
