[project]
name = "FeedCopterSpotter"
version = "0.2.12"

[tool.commitizen]
version_provider = "pep621"
version_files = [
    "__version__.py",
    "docker-compose-buildx.yml",
    "kube/dev/fcs-deployment-dev.yaml",
    "Dockerfile",
    "pyproject.toml:version"
]
update_changelog_on_bump = true
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
#major_version_zero = true
